# minesweeper

./: .eslintrc.cjs  .gitignore  high_scores.html  index.html  package.json  svgr.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.lib.ts  vite.config.ts
src/: App.tsx  Root.tsx  constants.ts  index.ts  scores.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs  state.rs  timer.rs
src/game/: Cell.tsx  DigitalNumberDisplay.tsx  FaceButton.tsx  Game.tsx  GameContext.tsx  Grid.tsx  Icon.tsx  ScoreBar.tsx  game.d.ts  useGameState.ts
src/game/icons/: 1.tsx  2.tsx  3.tsx  4.tsx  5.tsx  6.tsx  7.tsx  8.tsx  Bomb.tsx  Flag.tsx  index.ts
src/playfield/: Cell.tsx  DigitalNumberDisplay.tsx  FaceButton.tsx  GameContext.tsx  Grid.tsx  Icons.tsx  ScoreBar.tsx  getAdjacentCoordinates.ts  getGridData.ts  playfield.d.ts  timer.ts  useGameState.ts
src/scores/: Scores.tsx
src/settings/: SettingsContext.tsx  settings.d.ts  settingsReducer.ts  useSettings.tsx
src/utils/: common.ts  getGridData.ts  message.ts  timer_worker.ts  useConfig.tsx  useListen.ts  useLocalStorage.ts  useStorage.ts  useTauriStore.ts
