[package]
name = "minesweeper"
version = "0.0.1"
description = "A Tauri App"
authors = ["Justin Wallace"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-create", "dialog-message", "window-set-size", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.34.0", features = ["full"] }
ts-rs = "7.0.0"

[profile.release]
panic = "abort" 
codegen-units = 1 
lto = true 
opt-level = "s" 
strip = true 

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
